--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@ h1 {
     width: 300px;
     height: 300px;
     border: 1px solid black;
+    margin-right: 10%;
 }
 .photo-box h3 {
   font-size: 36px;
