--- a/index.html
+++ b/index.html
@@ -2,213 +2,119 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
         <title>
             Shohag Biswas- Curriculum Vitae
         </title>
-        <style>
-            body {
-    margin: 5px;
-    border: 2px solid black;
-    padding: 20px;
-    font-family: 'Times New Roman', Times, serif;
-}
-.header-section {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-h1 {
-    font-size: 54px;
-    text-align: center;
-    margin: 0;
-    padding-left: 25%;
-}
-.photo-box {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-    margin-right: 20px;
-}
-.photo-box img {
-    width: 300px;
-    height: 300px;
-    border: 1px solid black;
-}
-.photo-box h3 {
-  font-size: 36px;
-  margin: 10px 40px 0 0;
-}
-fieldset {
-  border: 2px solid #716464; 
-  margin: 0 25px 20px;
-  padding: 20px 0 0 30px;
-  background-color: #f9f9f9; 
-  box-shadow: 2px 2px 8px rgba(0,0,0,0.1);
-  transition: 0.3s ease, box-shadow 0.3s ease;
- 
-}
- fieldset:hover {
-    transform: scale(1.03);
-    font-weight: bold;
-  }
-
-legend {
-  font-weight: bold;
-  font-size: 36px;
-  padding: 0 ;
-  color: #333;
-   background-color: cornflowerblue;
-}
-table {
-  width: 100%;
-  border-collapse: collapse;
-  font-size: 18px;
-  margin-top: 10px;
-}
-table td {
-  padding: 8px;
-  vertical-align: top;
-  font-size: 28px;
-
-}
-table td:nth-child(2) {
-  padding: 8px 18px;
-}
-p {
-   line-height: 50px;
-  font-size: 28px;
-}
-        .signature {
-            margin-top: 100px;
-            width: 300px;
-        }
-
-        .signature-line {
-            border-top: 2px solid #000;
-            width: 200px;
-            margin-bottom: 5px;
-        }
-
-        .name {
-            font-weight: bold;
-            font-size: 28px;
-        }
-
-        .date {
-            font-weight: bold;
-            font-size: 28px;
-            margin-top: 10px;
-        }
-
-        @media screen and (max-width: 600px) {
-  body {
-    margin: 10px;
-    padding: 10px;
-    font-size: 16px;
-  }
-
-  .header-section {
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-  }
-
-  h1 {
-    font-size: 28px;
-    padding-left: 0;
-    text-align: center;
-  }
-
-  .photo-box {
-    align-items: center;
-    margin: 10px 0;
-  }
-
-  .photo-box img {
-    width: 150px;
-    height: 150px;
-  }
-
-  .photo-box h3 {
-    font-size: 20px;
-    margin: 10px 0 0;
-  }
-
-  fieldset {
-    margin: 15px 10px;
-    padding: 10px;
-  }
-
-  fieldset:hover {
-    transform: scale(1.01);
-    font-weight: bold;
-  }
-
-  legend {
-    font-size: 20px;
-    padding: 2px 6px;
-  }
-
-  table {
-    font-size: 16px;
-    width: 100%;
-  }
-
-  table td {
-    font-size: 16px;
-    padding: 6px;
-  }
-
-  table td:nth-child(2) {
-    padding: 6px 10px;
-  }
-
-  p {
-    font-size: 16px;
-    line-height: 28px;
-    padding: 5px;
-  }
-
-  .declaration {
-    font-size: 16px;
-    line-height: 28px;
-    margin: 30px 10px 0 10px;
-  }
-   .signature {
-            margin-top: 50px;
-            width: 300px;
-        }
-
-        .signature-line {
-            border-top: 1px solid #000;
-            width: 200px;
-            margin-bottom: 5px;
-        }
-
-        .name {
-            font-weight: bold;
-            font-size: 16px;
-        }
-
-        .date {
-            font-weight: bold;
-            font-size: 16px;
-            margin-top: 10px;
-        }
-        p {font-size: 16px;}
-}
-        </style>
+        <link rel="stylesheet" href="CV_css_file.css">
     </head>
     <body>
-        <div class="header-section">
-            <h1><strong>RESUME<br> of </strong></h1>
         <div class="photo-box">
-            <img src="https://avatars.githubusercontent.com/u/212499325?s=400&u=018724ef0906273f91801195f92abde2d4e97562&v=4" alt="Cv Photo">
-            <h3>Shohag Biswas</h3>
+            <p><span style="font-family: Book Antiqua; letter-spacing: 5px; font-size: 36px;"> SHOHAG BISWAS </span><br>
+                <strong>Address : Magura sador, Magura </strong><br>
+                <strong> Email :</strong><a href="mailto:ssshohagbiswas@gmail.com"> ssshohagbiswas@gmail.com</a><br>
+                <strong> Mobile :</strong> +8801867805497
+            </p>
+            <img src="https://avatars.githubusercontent.com/u/212499325?s=400&u=018724ef0906273f91801195f92abde2d4e97562&v=4" alt="CV Photo">
         </div>
-        </div>
-    <fieldset><legend><i>  PERSONAL DETAILS </i></legend>
+       <fieldset><legend><i> CAREER OBJECTIVE </i></legend>
+        <P>
+            To pursue a challenging career in a dynamic organization where the opportunity is to utilize my knowledge and skills for the betterment of that organization. I desire to keep in touch with the apex of success in my career by hard working and honesty.
+        </P>
+    </fieldset> 
+    <fieldset>
+  <legend><i> WORKING EXPERIENCE </i></legend>
+  <span style="font-weight: bold; font-size: 18px; padding: 0 12PX;"> 1.&nbsp;</span>
+  <span style="font-weight: bold; text-decoration: underline;text-underline-offset: 5px; font-size: 16px; margin-bottom: 0; margin-top: 5px;">COMPANY NAME: OMEGA DISTRIBUTION LIMITED </span><br>
+  <p style="margin-left: 4%; font-size: 16px; margin-top: 0; margin-bottom: 0; line-height: 1.8;">
+  <strong>(From Jan, 2024 to till Now)</strong><br>
+  <strong>Designation:</strong> Sales Representative (Sales & Marketing)<br>
+  <strong>Zone:</strong> Mohammadpur, Dhaka <br>
+  <strong>Reporting to:</strong> Territory Sales Manager (TSM)<br>
+  <strong>Job Responsibility:</strong></p>
+  <ul style="line-height: 1.8;">
+    <li>Set day wise target than Achieve.</li>
+    <li>Uncovered outlet find out, & Covered in my Outlet.</li>
+    <li>Achieve PC & LPC, Productive call, & Line Pare Call.</li>
+    <li>Free offer check, posting, Phone call, Problematic Product find out etc.</li>
+    <li>Prepared tour plan & submit to line manager.</li>
+    <li>Relation Build up.</li>
+    <li>Achieve own target.</li>
+    <li>Attend to monthly meeting.</li>
+    <li>Planning for smooth work.</li>
+  </ul>
+  <span style="font-weight: bold; font-size: 18px; padding: 0 12px;"> 2.&nbsp;</span>
+  <span style="font-weight: bold; text-decoration: underline; text-underline-offset: 5px; font-size: 16px; margin-bottom: 0;">COMPANY NAME: MATADOR BALLPEN INDUSTRIES LIMITED </span><br>
+  <p style="margin-left: 4%; font-size: 16px; margin-top: 0; margin-bottom: 0; line-height: 1.8;">
+  <strong>(From June, 2023 to December 2024)</strong><br>
+  <strong>Designation:</strong> Store Assistant <br>
+  <strong>Department:</strong> Supply chain <br>
+  <strong>Job Responsibility:</strong>
+  <ul style="line-height: 1.8;">
+    <li>Receive and verify incoming goods</li>
+    <li>Maintain and update inventory records regularly</li>
+    <li>Store materials properly following the warehouse system </li>
+    <li>Coordinate the collection and distribution of goods from the depot</li>
+    <li>Prepare stock reports and report to the supervisor/manager</li>
+    <li>Identify stock shortages or excesses</li>
+    <li>Ensure compliance with safety regulations</li>
+    <li>Check and maintain receiving and delivery documents</li>
+  </ul>
+  </p>
+</fieldset>
+<fieldset>
+        <legend><i> EDUCATIONAL QUALIFICATION </i></legend>
+        <table>
+        <tr>
+            <td style="text-decoration: underline;text-underline-offset: 5px; font-size: 18px; padding-bottom: 10px;">
+                <strong>Higher Secondary Certificate (H.S.C)</strong></td>
+        </tr>           
+        <tr>
+            <td>Institution Name</td><td>:</td><td>Sreepur Degree College (118174)</td>
+        </tr>
+        <tr>
+            <td>Group</td><td>:</td><td>Humanities</td>
+        </tr>
+        <tr>
+            <td>Result</td><td>:</td><td>4.25</td>
+        </tr>
+        <tr>
+            <td>Passing Year</td><td>:</td><td>2022</td>
+        </tr>
+        <tr>
+            <td style="text-decoration: underline;text-underline-offset: 5px; font-size: 18px; padding-top: 30px;padding-bottom: 10px;">
+                <strong>Secondary School Certificate (S.S.C)</strong></td>
+        </tr>          
+        <tr>
+            <td>Institution Name</td><td>:</td><td>Gangnalia High School (117911)</td>
+        </tr>
+        <tr>
+            <td>Group</td><td>:</td><td>Science</td>
+        </tr>
+        <tr>
+            <td>Result</td><td>:</td><td>3.94 (Out of 5.00)</td>
+        </tr>
+        <tr>
+            <td>Passing Year</td><td>:</td><td>2019</td>
+        </tr>
+        <tr>
+            <td>Board</td><td>:</td><td>Jessore</td>
+        </tr>
+  </table>
+</fieldset>
+<fieldset><legend><i> INTEREST & HOBBIES </i></legend>
+    <p>
+       Freelance Working, reading books, journals, papers, Internet browsing, research, Traveling. <br>
+       </p>
+       <p style="font-size: 16px; line-height: 1.6;">
+       <strong> Computer skill's : </strong> Ms Word, Ms Excel, Ms Power-point, Internet Browsing, Adobe Photoshop.<br>
+       <strong> Technical skill's :</strong> html5, CSS3, Java Script, sap.
+       </p>
+       <p>
+       <strong> Language : </strong> Fluent in Bangla and English.
+    </p>
+</fieldset>
+ <fieldset><legend><i>  PERSONAL DETAILS </i></legend>
         <table>
         <tr>
             <td>Name</td><td>:</td><td>Shohag Biswas</td>
@@ -235,6 +141,9 @@ p {
             <td>Nationality</td><td>:</td><td>Bangladeshi (by birth)</td>
         </tr>
         <tr>
+            <td>National ID card</td><td>:</td><td> 8280885313 </td>
+        </tr>
+        <tr>
             <td>Religion</td><td>:</td><td>Hindu</td>
         </tr>
         <tr>
@@ -243,101 +152,14 @@ p {
         </table>
 
         </fieldset>
-        <fieldset><legend><i> Mailing ADDRESS </i></legend>
-        <table>
-        <tr>
-            <td>Vill : Gopinathpur,&nbsp;&nbsp;P.O : Gangnalia,</td>
-        </tr>
-        <tr>
-            <td>P.S : magura sadar,&nbsp;&nbsp;Dis : Magura</td>
-        </tr>
-        <tr>
-            <td>Mobile : 01864244828</td>
-        </tr>
-        <tr>
-            <td>Email :<a href="mailto:ssshohagbiswas@gmail.com">ssshohagbiswas@gmail.com</a></td>
-        </tr>
-        </table>
-    </fieldset>
-    <fieldset><legend><i> CAREER OBJECTIVE </i></legend>
-        <P>
-            To pursue a challenging career in a dynamic organization where the opportunity is to utilize my knowledge and skills for the betterment of that organization. I desire to keep in touch with the apex of success in my career by hard working and honesty.
-        </P>
-    </fieldset>
-    <fieldset>
-        <legend><i> EDUCATIONAL QUALIFICATION </i></legend>
-        <table>
-        <tr>
-            <td colspan="3" style="text-decoration: underline;"><strong>Higher Secondary Certificate (H.S.C)</strong></td>
-        </tr>           
-        <tr>
-            <td>Institution Name</td><td>:</td><td>Sreepur Degree College (118174)</td>
-        </tr>
-        <tr>
-            <td>Group</td><td>:</td><td>Humanities</td>
-        </tr>
-        <tr>
-            <td>Result</td><td>:</td><td>4.25</td>
-        </tr>
-        <tr>
-            <td>Passing Year</td><td>:</td><td>2022</td>
-        </tr>
-        <tr>
-        <tr><td><br></td></tr>
-            <td colspan="3" style="text-decoration: underline;"><strong>Secondary School Certificate (S.S.C)</strong></td>
-        </tr>          
-        <tr>
-            <td>Institution Name</td><td>:</td><td>Gangnalia High School (117911)</td>
-        </tr>
-        <tr>
-            <td>Group</td><td>:</td><td>Science</td>
-        </tr>
-        <tr>
-            <td>Result</td><td>:</td><td>3.94 (Out of 5.00)</td>
-        </tr>
-        <tr>
-            <td>Passing Year</td><td>:</td><td>2019</td>
-        </tr>
-        <tr>
-            <td>Board</td><td>:</td><td>Jessore</td>
-        </tr>
-  </table>
-</fieldset>
-<fieldset style="padding-top: 0;">
-    <legend><i> SELF ANALYSIS </i></legend>
-    <p>
-        &#10004; Ability to cope up with environment.<br>
-        &#10004; Disciplined, responsible and dynamic.<br>
-        &#10004; Ability to maintain schedules and commitments.<br>
-        &#10004; Ability to work independently or in a team.
-    </p>
-</fieldset>
-<fieldset><legend><i> COMPUTER SKILL </i></legend>
-    <p>
-        Computer Office Management:-Ms Word, Ms Excel, Internet Browsing, Adobe Photoshop, html5, CSS3, Java Script, Etc.
-    </p>
-</fieldset>
-    <fieldset>
-    <legend><i> LANGUAGE PROFICIENCY </i></legend>
-    <p>
-        <strong>Bengali:</strong> Extensive communicative skill as native one.<br>
-        <strong>English:</strong> Good in listening, reading, speaking and writing.
-    </p>
-</fieldset>
-<fieldset>
-    <legend><i> EXPERIENCE </i></legend>
-    <p style="line-height: 40px;">
-         &#10148; I worked as a Store Assistant at Matador Ballpen Industries from June 1<sup>st</sup>, 2022 to December 2023.<br>
-        &#10148; I have been working as a Sales Representative (S.R.) at Omega Distribution Limited since January 1<sup>st</sup>, 2024.
-    </p>
-</fieldset>
-<p style="line-height: 40px; margin: 75px 25px 0 25px;">
-    I hereby declare that the information provided in this resume is true to the best of my knowledge and belief and correctly describes my background and experience.
+
+        <p style="font-size: 16px; line-height: 24px; margin: 30px 25px 0 25px;">
+    “I CERTIFY THAT ALL INFORMATION STATED IN THIS RESUME IS TRUE AND COMPLETE TO THE BEST OF MY KNOWLEDGE, I AUTHORIZE THE RECEIVER OF THIS RESUME TO VERIFY THE INFORMATION PROVIDED IN THIS RESUME”
 </p>
 <div class="signature">
     <div class="signature-line"></div>
     <div class="name">(Shohag Biswas)</div>
     <div class="date">Date : ....................</div>
 </div>
-</body>
+    </body>
 </html>
