--- a/index.html
+++ b/index.html
@@ -1,32 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-        <title>
-            Shohag Biswas- Curriculum Vitae
-        </title>
-        <style>
-            body {
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <title>Shohag Biswas - Curriculum Vitae</title>
+  <style>
+    body {
     margin: 5px;
     padding: 5px;
     font-family: 'Times New Roman', Times, serif;
-    line-height: 1.6;
+    line-height: 1.2;
+    font-size: 16px;
 }
 .photo-box {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 10px;
-    padding: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 20px 20px;
 }
-.photo-box p {
-    font-size: 24px;
-    line-height: 1.8;
+
+.photo-box.info {
+  flex: 1;
+  color: #333;
+
 }
+
+.photo-box .info .name {
+  font-size: 28px;
+  font-weight: bold;
+  letter-spacing: 3px;
+  margin-bottom: 10px;
+  font-family: 'Book Antiqua';
+}
+
+.photo-box .info p {
+  font-size: 16px;
+}
+
+.photo-box .info a {
+  color: #0066cc;
+  text-decoration: underline;
+  text-underline-offset: 3px;
+}
+
 .photo-box img {
-    height: 250px;
     width: 250px;
+    height: 250px;
     border: 2px solid black;
 }
 fieldset {
@@ -36,284 +55,337 @@ fieldset {
   background-color: #f9f9f9; 
   box-shadow: 2px 2px 8px rgba(0,0,0,0.1);
   transition: 0.3s ease, box-shadow 0.3s ease;
- 
 }
 fieldset:hover {
-    transform: scale(1.04);
-  }
+    transform: scale(1.03);
+}
 legend {
   font-weight: bold;
   font-size: 20px;
   padding: 2px 12px;
   color: black;
-   background-color: rgb(53, 160, 151);
+  background-color: rgb(53, 160, 151);
 }
 p {
     font-size: 16px;
     color: black;
     padding: 0 20px;
     margin-top: 5px;
-    font-family: 'Times New Roman', Times, serif;
 }
-ul {
-    margin-left: 7%;
-    padding-left: 0;
-    font-size: 16px;
-    line-height: 1.8;
-    list-style: none;
-    color: black;
-    margin-top: 10px;
+.job {
+  margin-bottom: 10px;
+  padding: 15px 0 0 15px;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+}
+
+.job-title {
+  font-weight: bold;
+  font-size: 18px;
+  color: #222;
+  margin-bottom: 10px;
+}
+
+.company-name {
+  color: #000;
+  text-transform: uppercase;
+  text-decoration: underline;
+  text-underline-offset: 5px;
+}
+
+.job-details {
+  font-size: 15px;
+  line-height: 1.6;
+  margin-bottom: 10px;
+}
+
+.job ul {
+  list-style: none;
+  padding-left: 0;
+}
+
+.job ul li {
+  position: relative;
+  padding-left: 20px;
+  margin-bottom: 6px;
+  font-size: 15px;
 }
 
 ul li::before {
-    content: "\27A4";
+    content: "➤";
     color: rgb(53, 160, 151);
     margin-right: 10px;
     font-weight: bold;
 }
+.education-box {
+  border: 1px solid #ccc;
+  margin-bottom: 10px;
+  border-radius: 8px;
+  background-color: #fdfdfd;
+  box-shadow: 0 2px 4px rgba(0,0,0,0.05);
+  padding-left: 16px;
+}
+
 table {
-    margin: 5px;
-    font-size: 16px;
-    color: black;
+  width: 100%;
+  border-collapse: collapse;
+  font-size: 16px;
+}
+
+tr.header {
+  font-size: 18px;
 }
 
 td {
-    padding: 2px 6px;
-    vertical-align: top;
-    font-size: 16px;
+  padding: 8px;
+  vertical-align: top;
+  padding-left: 15px;
+  line-height: 1.0;
 }
 
 td:first-child {
-    font-weight: bold;
-    color: black;
+  width: 30%;
+  font-weight: bold;
 }
 
 td:nth-child(2) {
-    padding-left: 0;
+  width: 5%;
+  text-align: center;
 }
- .signature {
-            margin-top: 100px;
-            width: 300px;
-        }
 
-        .signature-line {
-            border-top: 2px solid #000;
-            width: 200px;
-            margin-bottom: 5px;
-        }
+td:last-child {
+  width: 65%;
+}
 
-        .name {
-            font-weight: bold;
-            font-size: 18px;
-            padding-left: 10px;
-        }
-
-        .date {
-            font-weight: bold;
-            font-size: 16px;
-            margin-top: 10px;
-            padding-left: 10px;
-        }
+.signature {
+    margin-top: 90px;
+    width: 300px;
+}
+.signature-line {
+    border-top: 2px solid #000;
+    width: 200px;
+    margin-bottom: 5px;
+}
+.name {
+    font-weight: bold;
+    font-size: 18px;
+    padding-left: 10px;
+}
+.date {
+    font-weight: bold;
+    font-size: 16px;
+    margin-top: 10px;
+    padding-left: 10px;
+}
 @media (max-width: 768px) {
-    body {
-        margin: 2px;
-        padding: 2px;
-        border: none;
-    }
+  body {
+    font-size: 14px;
+    margin: 5px;
+    padding: 5px;
+  }
 
-    .photo-box {
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-    }
+  .photo-box {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    margin: 10px;
+  }
 
-    .photo-box p {
-        font-size: 18px;
-    }
+  .photo-box img {
+    width: 180px;
+    height: 180px;
+    margin-bottom: 10px;
+  }
 
-    .photo-box img {
-        height: 180px;
-        width: 180px;
-        margin-top: 15px;
-    }
+  .photo-box .info {
+    flex: none;
+  }
 
-    fieldset {
-        margin: 10px 10px;
-        padding: 10px;
-    }
+  .photo-box .info .name {
+    font-size: 22px;
+  }
 
-    legend {
-        font-size: 18px;
-        text-align: center;
-    }
+  fieldset {
+    margin: 10px;
+    padding: 10px;
+  }
 
-    p, ul, table {
-        font-size: 14px;
-    }
+  legend {
+    font-size: 18px;
+  }
 
-    .signature {
-        width: 100%;
-        margin: 40px 10px 0;
-    }
+  p {
+    padding: 0 10px;
+  }
 
-    .signature-line {
-        width: 70%;
-    }
+  .job {
+    padding: 10px;
+  }
+
+  .job-title {
+    font-size: 16px;
+  }
+
+  .job-details,
+  .job ul li {
+    font-size: 14px;
+  }
+
+  .education-box {
+    padding-left: 10px;
+  }
+
+  table {
+    font-size: 14px;
+  }
+
+  tr.header {
+    font-size: 16px;
+  }
+
+  td {
+    padding: 6px;
+    line-height: 1.2;
+    padding-left: 10px;
+  }
+
+  .signature {
+    width: 100%;
+    text-align: center;
+    margin-top: 50px;
+  }
+
+  .signature-line {
+    width: 60%;
+    margin: 0 auto 5px;
+  }
+
+  .name, .date {
+    font-size: 16px;
+  }
 }
-        </style>
-    </head>
-    <body>
-        <div class="photo-box">
-            <p><span style="font-family: Book Antiqua; letter-spacing: 5px; font-size: 36px;"> SHOHAG BISWAS </span><br>
-                <strong>Address : Magura sador, Magura </strong><br>
-                <strong> Email :</strong><a href="mailto:ssshohagbiswas@gmail.com"> ssshohagbiswas@gmail.com</a><br>
-                <strong> Mobile :</strong> +8801867805497
-            </p>
-            <img src="https://avatars.githubusercontent.com/u/212499325?s=400&u=018724ef0906273f91801195f92abde2d4e97562&v=4" alt="CV Photo">
-        </div>
-       <fieldset><legend><i> CAREER OBJECTIVE </i></legend>
-        <P>
-            To pursue a challenging career in a dynamic organization where the opportunity is to utilize my knowledge and skills for the betterment of that organization. I desire to keep in touch with the apex of success in my career by hard working and honesty.
-        </P>
-    </fieldset> 
-    <fieldset>
-  <legend><i> WORKING EXPERIENCE </i></legend>
-  <span style="font-weight: bold; font-size: 18px; padding: 0 12PX;"> 1.&nbsp;</span>
-  <span style="font-weight: bold; text-decoration: underline;text-underline-offset: 5px; font-size: 16px; margin-bottom: 0; margin-top: 5px;">COMPANY NAME: OMEGA DISTRIBUTION LIMITED </span><br>
-  <p style="margin-left: 4%; font-size: 16px; margin-top: 0; margin-bottom: 0; line-height: 1.8;">
-  <strong>(From Jan, 2024 to till Now)</strong><br>
-  <strong>Designation:</strong> Sales Representative (Sales & Marketing)<br>
-  <strong>Zone:</strong> Mohammadpur, Dhaka <br>
-  <strong>Reporting to:</strong> Territory Sales Manager (TSM)<br>
-  <strong>Job Responsibility:</strong></p>
-  <ul style="line-height: 1.8;">
-    <li>Set day wise target than Achieve.</li>
-    <li>Uncovered outlet find out, & Covered in my Outlet.</li>
-    <li>Achieve PC & LPC, Productive call, & Line Pare Call.</li>
-    <li>Free offer check, posting, Phone call, Problematic Product find out etc.</li>
-    <li>Prepared tour plan & submit to line manager.</li>
-    <li>Relation Build up.</li>
-    <li>Achieve own target.</li>
-    <li>Attend to monthly meeting.</li>
-    <li>Planning for smooth work.</li>
-  </ul>
-  <span style="font-weight: bold; font-size: 18px; padding: 0 12px;"> 2.&nbsp;</span>
-  <span style="font-weight: bold; text-decoration: underline; text-underline-offset: 5px; font-size: 16px; margin-bottom: 0;">COMPANY NAME: MATADOR BALLPEN INDUSTRIES LIMITED </span><br>
-  <p style="margin-left: 4%; font-size: 16px; margin-top: 0; margin-bottom: 0; line-height: 1.8;">
-  <strong>(From June, 2023 to December 2024)</strong><br>
-  <strong>Designation:</strong> Store Assistant <br>
-  <strong>Department:</strong> Supply chain <br>
-  <strong>Job Responsibility:</strong>
-  <ul style="line-height: 1.8;">
-    <li>Receive and verify incoming goods</li>
-    <li>Maintain and update inventory records regularly</li>
-    <li>Store materials properly following the warehouse system </li>
-    <li>Coordinate the collection and distribution of goods from the depot</li>
-    <li>Prepare stock reports and report to the supervisor/manager</li>
-    <li>Identify stock shortages or excesses</li>
-    <li>Ensure compliance with safety regulations</li>
-    <li>Check and maintain receiving and delivery documents</li>
-  </ul>
-  </p>
-</fieldset>
-<fieldset>
-        <legend><i> EDUCATIONAL QUALIFICATION </i></legend>
-        <table>
-        <tr>
-            <td style="text-decoration: underline;text-underline-offset: 5px; font-size: 18px; padding-bottom: 10px;">
-                <strong>Higher Secondary Certificate (H.S.C)</strong></td>
-        </tr>           
-        <tr>
-            <td>Institution Name</td><td>:</td><td>Sreepur Degree College (118174)</td>
-        </tr>
-        <tr>
-            <td>Group</td><td>:</td><td>Humanities</td>
-        </tr>
-        <tr>
-            <td>Result</td><td>:</td><td>4.25</td>
-        </tr>
-        <tr>
-            <td>Passing Year</td><td>:</td><td>2022</td>
-        </tr>
-        <tr>
-            <td style="text-decoration: underline;text-underline-offset: 5px; font-size: 18px; padding-top: 30px;padding-bottom: 10px;">
-                <strong>Secondary School Certificate (S.S.C)</strong></td>
-        </tr>          
-        <tr>
-            <td>Institution Name</td><td>:</td><td>Gangnalia High School (117911)</td>
-        </tr>
-        <tr>
-            <td>Group</td><td>:</td><td>Science</td>
-        </tr>
-        <tr>
-            <td>Result</td><td>:</td><td>3.94 (Out of 5.00)</td>
-        </tr>
-        <tr>
-            <td>Passing Year</td><td>:</td><td>2019</td>
-        </tr>
-        <tr>
-            <td>Board</td><td>:</td><td>Jessore</td>
-        </tr>
-  </table>
-</fieldset>
-<fieldset><legend><i> INTEREST & HOBBIES </i></legend>
+
+  </style>
+</head>
+<body>
+  <div class="photo-box">
+    <div class="info">
+      <p class="name">SHOHAG BISWAS</p>
+      <p><strong>Address:</strong> Magura sador, Magura</p>
+      <p><strong>Email:</strong> <a href="mailto:ssshohagbiswas@gmail.com">ssshohagbiswas@gmail.com</a></p>
+      <p><strong>Mobile:</strong> +8801867805497</p>
+    </div>
+    <img src="https://avatars.githubusercontent.com/u/212499325?s=400&u=018724ef0906273f91801195f92abde2d4e97562&v=4" alt="CV Photo" />
+  </div>
+
+  <fieldset>
+    <legend><i>CAREER OBJECTIVE</i></legend>
     <p>
-       Freelance Working, reading books, journals, papers, Internet browsing, research, Traveling. <br>
-       </p>
-       <p style="font-size: 16px; line-height: 1.6;">
-       <strong> Computer skill's : </strong> Ms Word, Ms Excel, Ms Power-point, Internet Browsing, Adobe Photoshop.<br>
-       <strong> Technical skill's :</strong> html5, CSS3, Java Script, sap.
-       </p>
-       <p>
-       <strong> Language : </strong> Fluent in Bangla and English.
+        To pursue a challenging career in a dynamic organization where the opportunity is to utilize my knowledge and skills for the betterment of that organization. I desire to keep in touch with the apex of success in my career by hard working and honesty.
     </p>
-</fieldset>
- <fieldset><legend><i>  PERSONAL DETAILS </i></legend>
-        <table>
-        <tr>
-            <td>Name</td><td>:</td><td>Shohag Biswas</td>
-        </tr>
-        <tr>
-            <td>Father’s Name</td><td>:</td><td>Jogendra Nath Biswas</td>
-        </tr>
-        <tr>
-            <td>Mother’s Name</td><td>:</td><td>Kalpona Rani Biswas</td>
-        </tr>
-        <tr>
-            <td>Permanent Address</td><td>:</td><td>Vill: Gopinathpur, P.O: Gangnalia,<br>P.S: Magura Sadar, Dist: Magura</td>
-        </tr>
-        <tr>
-            <td>Date of Birth</td><td>:</td><td>18<sup>th</sup> May, 2003</td>
-        </tr>
-        <tr>
-            <td>Gender</td><td>:</td><td>Male</td>
-        </tr>
-        <tr>
-            <td>Marital Status</td><td>:</td><td>Single</td>
-        </tr>
-        <tr>
-            <td>Nationality</td><td>:</td><td>Bangladeshi (by birth)</td>
-        </tr>
-        <tr>
-            <td>National ID card</td><td>:</td><td> 8280885313 </td>
-        </tr>
-        <tr>
-            <td>Religion</td><td>:</td><td>Hindu</td>
-        </tr>
-        <tr>
-            <td>Blood Group</td><td>:</td><td>O+ (Ve)</td>
-        </tr>
-        </table>
+  </fieldset>
 
-        </fieldset>
+  <fieldset>
+    <legend><i>WORKING EXPERIENCE</i></legend>
+    <div class="job">
+      <div class="job-title">1. <span class="company-name">COMPANY NAME: OMEGA DISTRIBUTION LIMITED</span></div>
+      <p class="job-details">
+        <strong>(From Jan, 2024 to till Now)</strong><br />
+        <strong>Designation:</strong> Sales Representative (Sales & Marketing)<br />
+        <strong>Zone:</strong> Mohammadpur, Dhaka<br />
+        <strong>Reporting to:</strong> Territory Sales Manager (TSM)<br />
+        <strong>Job Responsibility:</strong>
+      </p>
+      <ul>
+        <li>Set day wise target than Achieve.</li>
+        <li>Uncovered outlet find out, & Covered in my Outlet.</li>
+        <li>Achieve PC & LPC, Productive call, & Line Pare Call.</li>
+        <li>Free offer check, posting, Phone call, Problematic Product find out etc.</li>
+        <li>Prepared tour plan & submit to line manager.</li>
+        <li>Relation Build up.</li>
+        <li>Achieve own target.</li>
+        <li>Attend to monthly meeting.</li>
+        <li>Planning for smooth work.</li>
+      </ul>
+    </div>
+    <div class="job">
+      <div class="job-title">2. <span class="company-name">COMPANY NAME: MATADOR BALLPEN INDUSTRIES LIMITED</span></div>
+      <p class="job-details">
+        <strong>(From June, 2023 to December 2024)</strong><br />
+        <strong>Designation:</strong> Store Assistant<br />
+        <strong>Department:</strong> Supply chain<br />
+        <strong>Job Responsibility:</strong>
+      </p>
+      <ul>
+        <li>Receive and verify incoming goods</li>
+        <li>Maintain and update inventory records regularly</li>
+        <li>Store materials properly following the warehouse system</li>
+        <li>Coordinate the collection and distribution of goods from the depot</li>
+        <li>Prepare stock reports and report to the supervisor/manager</li>
+        <li>Identify stock shortages or excesses</li>
+        <li>Ensure compliance with safety regulations</li>
+        <li>Check and maintain receiving and delivery documents</li>
+      </ul>
+    </div>
+  </fieldset>
 
-        <p style="font-size: 16px; line-height: 24px; margin: 30px 25px 0 25px;">
+  <fieldset>
+    <legend><i>EDUCATIONAL QUALIFICATION</i></legend>
+    <div class="education-box">
+    <table>
+      <tr class="header"><td colspan="3"><strong>Higher Secondary Certificate (H.S.C)</strong></td></tr>
+      <tr><td>Institution Name</td><td>:</td><td>Sreepur Degree College (118174)</td></tr>
+      <tr><td>Group</td><td>:</td><td>Humanities</td></tr>
+      <tr><td>Result</td><td>:</td><td>4.25</td></tr>
+      <tr><td>Passing Year</td><td>:</td><td>2022</td></tr>
+    </table>
+    </div>
+    <div class="education-box">
+    <table>
+      <tr class="header"><td colspan="3"><strong>Secondary School Certificate (S.S.C)</strong></td></tr>
+      <tr><td>Institution Name</td><td>:</td><td>Gangnalia High School (117911)</td></tr>
+      <tr><td>Group</td><td>:</td><td>Science</td></tr>
+      <tr><td>Result</td><td>:</td><td>3.94 (Out of 5.00)</td></tr>
+      <tr><td>Passing Year</td><td>:</td><td>2019</td></tr>
+      <tr><td>Board</td><td>:</td><td>Jessore</td></tr>
+    </table>
+  </fieldset>
+
+  <fieldset>
+    <legend><i>INTEREST & HOBBIES</i></legend>
+    <p>Freelance Working, reading books, journals, papers, Internet browsing, research, Traveling.</p>
+    <div class="skills">
+      <p><strong>Computer skills:</strong> Ms Word, Ms Excel, Ms Power-point, Internet Browsing, Adobe Photoshop.</p>
+      <p><strong>Technical skills:</strong> html5, CSS3, Java Script, sap.</p>
+    </div>
+    <p><strong>Language:</strong> Fluent in Bangla and English.</p>
+  </fieldset>
+
+  <fieldset>
+    <legend><i>PERSONAL DETAILS</i></legend>
+    <table>
+      <tr><td>Name</td><td>:</td><td>Shohag Biswas</td></tr>
+      <tr><td>Father’s Name</td><td>:</td><td>Jogendra Nath Biswas</td></tr>
+      <tr><td>Mother’s Name</td><td>:</td><td>Kalpona Rani Biswas</td></tr>
+      <tr><td>Permanent Address</td><td>:</td><td>Vill: Gopinathpur, P.O: Gangnalia,<br />P.S: Magura Sadar, Dist: Magura</td></tr>
+      <tr><td>Date of Birth</td><td>:</td><td>18<sup>th</sup> May, 2003</td></tr>
+      <tr><td>Gender</td><td>:</td><td>Male</td></tr>
+      <tr><td>Marital Status</td><td>:</td><td>Single</td></tr>
+      <tr><td>Nationality</td><td>:</td><td>Bangladeshi (by birth)</td></tr>
+      <tr><td>National ID card</td><td>:</td><td>8280885313</td></tr>
+      <tr><td>Religion</td><td>:</td><td>Hindu</td></tr>
+      <tr><td>Blood Group</td><td>:</td><td>O+ (Ve)</td></tr>
+    </table>
+  </fieldset>
+
+  <p class="declaration">
     “I CERTIFY THAT ALL INFORMATION STATED IN THIS RESUME IS TRUE AND COMPLETE TO THE BEST OF MY KNOWLEDGE, I AUTHORIZE THE RECEIVER OF THIS RESUME TO VERIFY THE INFORMATION PROVIDED IN THIS RESUME”
-</p>
-<div class="signature">
+  </p>
+
+  <div class="signature">
     <div class="signature-line"></div>
     <div class="name">(Shohag Biswas)</div>
     <div class="date">Date : ....................</div>
-</div>
-    </body>
+  </div>
+</body>
 </html>
