--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     padding: 5px;
     font-family: 'Times New Roman', Times, serif;
     line-height: 1.2;
-    font-size: 16px;
+    font-size: 14px;
 }
 .photo-box {
   display: flex;
@@ -67,7 +67,7 @@ legend {
   background-color: rgb(53, 160, 151);
 }
 p {
-    font-size: 16px;
+    font-size: 14px;
     color: black;
     padding: 0 20px;
     margin-top: 5px;
@@ -94,7 +94,7 @@ p {
 }
 
 .job-details {
-  font-size: 15px;
+  font-size: 16px;
   line-height: 1.6;
   margin-bottom: 10px;
 }
@@ -108,7 +108,7 @@ p {
   position: relative;
   padding-left: 20px;
   margin-bottom: 6px;
-  font-size: 15px;
+  font-size: 14px;
 }
 
 ul li::before {
@@ -178,90 +178,28 @@ td:last-child {
     padding-left: 10px;
 }
 @media (max-width: 768px) {
-  body {
-    font-size: 14px;
-    margin: 5px;
-    padding: 5px;
-  }
-
   .photo-box {
     flex-direction: column;
     align-items: center;
-    text-align: center;
-    margin: 10px;
   }
 
   .photo-box img {
-    width: 180px;
-    height: 180px;
-    margin-bottom: 10px;
+    width: 150px;
+    height: 150px;
   }
 
   .photo-box .info {
-    flex: none;
-  }
-
-  .photo-box .info .name {
-    font-size: 22px;
+    text-align: center;
+    margin-bottom: 20px;
   }
 
   fieldset {
-    margin: 10px;
-    padding: 10px;
-  }
-
-  legend {
-    font-size: 18px;
-  }
-
-  p {
-    padding: 0 10px;
-  }
-
-  .job {
-    padding: 10px;
-  }
-
-  .job-title {
-    font-size: 16px;
-  }
-
-  .job-details,
-  .job ul li {
-    font-size: 14px;
-  }
-
-  .education-box {
-    padding-left: 10px;
-  }
-
-  table {
-    font-size: 14px;
-  }
-
-  tr.header {
-    font-size: 16px;
-  }
-
-  td {
-    padding: 6px;
-    line-height: 1.2;
-    padding-left: 10px;
+    margin: 0 10px;
   }
 
   .signature {
-    width: 100%;
+    width: auto;
     text-align: center;
-    margin-top: 50px;
-  }
-
-  .signature-line {
-    width: 60%;
-    margin: 0 auto 5px;
-  }
-
-  .name, .date {
-    font-size: 16px;
   }
 }
 
