--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta name="google-site-verification" content="NQ1qOSLm-fKoOq6PXs_kFcd11DpqmKdCy7agjE5QAZI" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <title>Shohag Biswas - Curriculum Vitae</title>
   <style>
@@ -327,3 +328,4 @@ td:last-child {
   </div>
 </body>
 </html>
+
